tests/failing/obuild.ml.opts
-c base=4,type=4,match_clause=4
